# heritage-gui

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  SECURITY.md  flake.nix  generate-assets.sh  input.css  old.tailwind.config.js  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js
.github/workflows/: integration.yml  release.yml
.zed/: settings.json
assets/: main.css
nix/: dioxus_cli.nix  flake.nix
src/: gui.rs  hook_helpers.rs  main.rs  onboarding.rs  utils.rs
src/clients/: config.rs  database.rs  mod.rs  service.rs
src/components/: account_xpubs.rs  alerts.rs  app_config.rs  badge.rs  balance.rs  copy.rs  create_key_provider.rs  delete.rs  export_heir_to_service.rs  footer.rs  heritages.rs  inputs.rs  lorem_ipsum.rs  misc.rs  mod.rs  modal.rs  navbar.rs  onboarding.rs  qrcode.rs  quick_actions.rs  service_connector.rs  timestamp.rs  transaction.rs  wallet.rs
src/components/heritage_configuration/: create_form.rs  mod.rs  v1.rs
src/components/loaded/: badge.rs  balance.rs  mod.rs  timestamp.rs
src/components/spend/: broadcast_tx.rs  mod.rs  sign_tx.rs
src/components/spend/create_tx/: heir.rs  mod.rs  owner.rs
src/components/svg/: mod.rs  svgs.rs
src/helper_hooks/: async_init.rs  mod.rs  utils.rs
src/helper_hooks/heir_wallets/: mod.rs
src/helper_hooks/heirs/: mod.rs
src/helper_hooks/heirwallets/: mod.rs
src/helper_hooks/wallets/: account_xpubs.rs  addresses.rs  backup.rs  heritage_configs.rs  ledger.rs  mod.rs  status.rs  transactions.rs  utxos.rs
src/loaded/: component.rs  element.rs  loaders.rs  mapper.rs  mod.rs
src/loaded/converters/: from.rs  from_dioxus.rs  mod.rs  ref_from.rs
src/state_management/: blockchain.rs  clipboard.rs  config.rs  database.rs  event_bus.rs  ledger.rs  mod.rs  onboarding.rs  service.rs  theme.rs
src/state_management/helpers/: blockchain.rs  clipboard.rs  config.rs  database.rs  heir.rs  heirwallet.rs  ledger.rs  mod.rs  service.rs  wallet.rs
src/views/: app_config.rs  heir_list.rs  heirs.rs  heirwallet_create.rs  heirwallet_list.rs  home.rs  inheritances.rs  main_layout.rs  mod.rs  onboarding.rs  splashscreen.rs  wallet.rs  wallet_create.rs  wallet_list.rs  wallets.rs
src/views/heirs/: heir.rs  heir_create.rs  heir_list.rs  mod.rs
src/views/heirs/configuration/: delete.rs  mod.rs
src/views/heirwallet/: heritages_list.rs  mod.rs  spend.rs  sync.rs
src/views/heirwallet/configuration/: delete.rs  mod.rs
src/views/wallet/: addresses_history.rs  heritage_configurations_history.rs  misc.rs  mod.rs  receive.rs  spend.rs  sync.rs  transactions_history.rs
src/views/wallet/configuration/: account_xpubs.rs  block_inclusion_objective.rs  current_heritage_config.rs  delete.rs  ledger_policies.rs  mod.rs
