[package]
name = "heritage-gui"
version = "0.1.0-alpha"
description = "The Heritage wallet GUI, a Bitcoin Taproot wallet managing on-chain inheritance of bitcoins"
repository = "https://github.com/crypto7world/heritage-gui.git"
rust-version = "1.83"
edition = "2021"
authors = ["Crypto7 <john@crypto7.world>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btc-heritage-wallet = { path = "../btc-heritage/crates/btc-heritage-wallet" }
# btc-heritage-wallet = { git = "https://github.com/crypto7world/btc-heritage.git", tag = "v0.20.2" }
open = "5.2.0"
serde = { version = "1.0", features = ["derive", "rc"] }
dioxus = { version = "0.6", features = ["router"] }
tokio = { version = "1" }
log = "0.4"
env_logger = "0.11"
chrono = "0.4.38"

dirs-next = "2.0"


[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
